--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,9 @@
  *
 */
 
-
+html {
+    scroll-behavior: smooth;
+  }
 /* ---- Base Rules ---- */
 body {
     background: rgb(136,203,171);
@@ -87,6 +89,13 @@ section {
     color: #fff;
     transition: ease 0.3s all;
 }
+
+li.your-active-class {
+    background: #333;
+    color: #fff;
+    transition: ease 0.3s all;
+}
+
 
 /* Header Styles */
 .page__header {
@@ -193,7 +202,7 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* ---- Theme State Rules ---- */
 /* Section Active Styles */
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
-section.your-active-class {
+section.-active-class {
     background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
 }
