--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,7 @@
  *
 */
 
-html {
-    scroll-behavior: smooth;
-  }
+
 /* ---- Base Rules ---- */
 body {
     background: rgb(136,203,171);
@@ -205,6 +203,11 @@ section:nth-of-type(3n + 1) .landing__container::after {
 section.-active-class {
     background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+section.your-active-class {
+    background-color:#000;
+    opacity: .5;
 }
 
 section.your-active-class .landing__container::before {
